# torch2vk

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
docs/: agentorch-lessons.md  contract-validation.md  frame-and-logical-tensor.md  goal.md  implementation-lessons.md  logical-tensor.md  minimal-load-to-execute.md  model-dir-structure.md  package-boundaries.md  profile-with-sqtt.md  profile-without-sqtt.md  pytorch-debug.md  pytorch-fx-debug.md  pytorch-fx.md  pytorch-porting-guide.md  record-replay-questions.md  record-replay.md  record-sqtt.md  replay-from-cache.md  shader-authoring.md  shader-contract.md  shader-contract.py  torch2vk-introduction-toc.md  torch2vk-introduction.md  validation-debugging.md
scripts/: build-mesa-radv.sh  ci.sh  compile_omnivoice_shaders.py  compile_qwen3_shaders.py  list_vulkan_devices.py  postprocess-sqtt.py  profile-sqtt.sh  verify_omnivoice_safetensor_weights.py  verify_omnivoice_shader_sources.py  verify_qwen3_contracts.py  verify_qwen3_debug.py  verify_qwen3_safetensor_weights.py  verify_qwen3_shader_sources.py  verify_qwen3_storage.py  vulkan_buffer_smoke.py  vulkan_command_smoke.py  vulkan_compute_pipeline_smoke.py  vulkan_descriptor_layout_smoke.py  vulkan_descriptor_set_smoke.py  vulkan_dispatch_smoke.py  vulkan_pipeline_layout_smoke.py  vulkan_qwen3_add_smoke.py  vulkan_qwen3_argmax_smoke.py  vulkan_qwen3_embedding_smoke.py  vulkan_qwen3_fa_split_reduce_smoke.py  vulkan_qwen3_flash_attn_smoke.py  vulkan_qwen3_linear_smoke.py  vulkan_qwen3_prefill_smoke.py  vulkan_qwen3_rms_norm_rope_k_smoke.py  vulkan_qwen3_rms_norm_rope_smoke.py  vulkan_qwen3_rms_norm_smoke.py  vulkan_qwen3_runner_smoke.py  vulkan_qwen3_safetensor_embedding_smoke.py  vulkan_qwen3_safetensor_prefill_smoke.py  vulkan_qwen3_set_rows_smoke.py  vulkan_qwen3_swiglu_smoke.py  vulkan_shader_module_smoke.py
src/models/: __init__.py  hf_cache.py  quiet.py
src/models/exported_omnivoice/: compare.py  custom_shaders.py  dispatch.py  export.py  pytorch_modules.py  reference.py  reference_setup.py  reference_specs.py  run.py
src/models/exported_qwen3_asr/: compare.py  debug_audio_tower.py  dispatch.py  export.py  export_forwards.py  pytorch_modules.py  reference.py  reference_setup.py  reference_specs.py  run.py
src/models/generated_qwen3_asr/: __init__.py  _frame.py  _lowering.py  audio_tower.py  execution.py  export.py  text_decode.py  text_prefill.py  token_select.py  token_store.py  transcribe.py
src/models/omnivoice/: __init__.py  _frame.py  audio_codec_decode.py  audio_head.py  execution.py  export.py  input_embeddings.py  iterative_decode.py  reference_prompt.py  text_prefill.py  token_select.py
src/models/optimized_omnivoice/: compare.py  custom_shaders.py  export.py  export_gguf.py  input_prep.py  quantization.py  reference.py  run.py
src/models/optimized_qwen3/: benchmark.py  export_gguf.py  quantization.py  run.py
src/models/optimized_qwen3_asr/: __init__.py  audio_tower.py  compare.py  execution.py  export_gguf.py  pytorch_modules.py  quantization.py  reference.py  run.py  text_decode.py  text_prefill.py  token_select.py  transcribe.py
src/models/quantized_klein9b/: README.md  __init__.py  autoencoder.py  compare.py  custom_shaders.py  export.py  export_gguf.py  export_manifest.json  model_sources.py  pytorch_modules.py  pytorch_reference.py  quantization.py  reference.py  run.py  text_encoder.py
src/models/quantized_omnivoice/: compare.py  custom_shaders.py  export.py  export_gguf.py  quantization.py  reference.py  run.py
src/models/quantized_qwen3/: __init__.py  benchmark.py  export.py  export_gguf.py  export_manifest.json  input_prep.py  quantization.py  reference.py  run.py
src/models/quantized_qwen3_asr/: __init__.py  compare.py  export.py  export_gguf.py  pytorch_modules.py  quantization.py  reference.py  run.py
src/models/qwen3_asr/: __init__.py  audio_tower.py  execution.py  export_v3.py  position_embedding.py  rope.py  runtime_smoke.py  text_decode.py  text_prefill.py  token_select.py  transcribe.py
src/models/spike_qwen3_asr/: dispatch.py  export.py  generated_text_layer.py  plans.json  probe.py  run.py  shapes.json
src/omnivoice/models/: omnivoice.py
src/qwen_asr/inference/: qwen3_asr.py
src/torch2vk/: __init__.py  artifacts.py  copied_shader_source.py  debug_context.py  e2e_debug.py  integration.py  logical.py  pytorch.py  reference_trace.py  replay.py  schema.py  shader.py  storage.py  validation.py  vulkan_backend.py  vulkan_runner.py
src/torch2vk/checkpoints/: __init__.py  checkpoint_tensor.py  gguf.py  safetensors.py
src/torch2vk/copied/: __init__.py
src/torch2vk/export/: __init__.py  _templates.py  checkpoint_dtypes.py  codegen.py  codegen_loop.py  contract_codegen.py  dispatch_codegen.py  dtype_policy.py  exported_program.py  frame_dispatch.py  frame_dispatch_codegen.py  gguf_quantizer.py  graph.py  ir.py  logical_tensor_codegen.py  lowering.py  package_codegen.py  protocols.py  quantization.py  reference_codegen.py  reflection.py  (+8 more)
tests/: test_debug_context_reference_order.py  test_e2e_debug_attribution.py  test_export.py  test_export_lowering.py  test_exported_omnivoice.py  test_exported_program.py  test_exported_qwen3_asr.py  test_generated_omnivoice.py  test_generated_qwen3_asr.py  test_omnivoice_generation.py  test_omnivoice_official_reference.py  test_omnivoice_qwen3_asr_roundtrip.py  test_omnivoice_safetensor_integration.py  test_optimized_qwen3.py  test_optimized_qwen3_asr.py  test_pytorch_model_examples.py  test_quantized_klein9b.py  test_quantized_omnivoice.py  test_quantized_qwen3.py  test_quantized_qwen3_asr.py  test_qwen3_asr.py  test_qwen3_safetensor.py  test_qwen3_safetensor_integration.py  test_reference_trace_provider.py  test_replay_decode.py  test_replay_rebind.py  test_replay_reuse.py  test_runtime_compare.py  test_runtime_qwen3_asr_audio_tower.py  test_runtime_qwen3_asr_audio_tower_conv2d1.py  test_runtime_qwen3_asr_position_embedding.py  test_runtime_qwen3_asr_smoke.py  test_spike_qwen3_asr.py  test_sqtt_postprocess.py  test_vulkan_foundation.py
tests/fixtures/: README.md
(+5877 files in other folders)
